[feature]: fix css issue in dark mode flashcard app

--- a/src/tools/flash_cards/style.css
+++ b/src/tools/flash_cards/style.css
@@ -205,6 +205,8 @@
     color: #fff;
 }
 
+.dark-mode .flashcard .front b,
+.dark-mode .flashcard .back b,
 .dark-mode .flashcard .front strong,
 .dark-mode .flashcard .back strong {
     color: #fff;
